[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/ChoiceBox.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Semi-Coder-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "slide_in"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "slide_out"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "stay"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ChoiceBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Boxes" type="Control" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TextBoxOut" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 295.0
margin_top = 670.0
margin_right = 1625.0
margin_bottom = 1040.0
color = Color( 0.617474, 0.334534, 0.792969, 0.313726 )

[node name="TextBoxIn" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 320.0
margin_top = 695.0
margin_right = 1600.0
margin_bottom = 1015.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Option1" type="Button" parent="CanvasLayer/Boxes"]
margin_left = 395.0
margin_top = 720.0
margin_right = 695.0
margin_bottom = 990.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.211765, 0.92549, 0.372549, 1 )
custom_colors/font_color_pressed = Color( 0.027451, 0.976471, 0.239216, 1 )
text = "Sim"
flat = true
clip_text = true

[node name="Option2" type="Button" parent="CanvasLayer/Boxes"]
margin_left = 1195.0
margin_top = 720.0
margin_right = 1495.0
margin_bottom = 990.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.184314, 0.184314, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.0431373, 0.0431373, 1 )
text = "NÃ£o"
flat = true
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Boxes"]
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )
anims/slide_in = SubResource( 4 )
anims/slide_out = SubResource( 5 )
anims/stay = SubResource( 6 )

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="CanvasLayer/Boxes/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="CanvasLayer/Boxes/Option2" to="." method="_on_Option2_pressed"]
